SVN
-------------------------------

XML:   Resolved issue CASTOR-1797 using contribution from Ralf Joachim [Ralf.joachim@syscon-world.de]
       Cleaned up 929 'Design For Extension' warnings at builder package.
       Details: http://jira.codehaus.org/browse/CASTOR-1797
       (Ralf - 20070102)

XML:   Resolved issue CASTOR-1796 using contribution from Ralf Joachim [Ralf.joachim@syscon-world.de]
       Cleaned up 351 'Maximum Line Length' warnings at builder package.
       Details: http://jira.codehaus.org/browse/CASTOR-1796
       (Ralf - 20070102)

XML:   Resolved issue CASTOR-1793 using contribution from Ralf Joachim [Ralf.joachim@syscon-world.de]
       Cleaned up 635 warnings with braces and whitespaces at builder package.
       Details: http://jira.codehaus.org/browse/CASTOR-1793
       (Ralf - 20070102)

XML:   Resolved issue CASTOR-1795 using contribution from Ralf Joachim [Ralf.joachim@syscon-world.de]
       Cleaned up 466 'Final Parameters' warnings at builder package.
       Details: http://jira.codehaus.org/browse/CASTOR-1795
       (Ralf - 20070102)

XML:   Resolved issue CASTOR-1794 using contribution from Ralf Joachim [Ralf.joachim@syscon-world.de]
       Cleaned up 316 'Style Javadoc' warnings at builder package.
       Details: http://jira.codehaus.org/browse/CASTOR-1794
       (Ralf - 20070102)

All:   Resolved issue CASTOR-1800 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Tune checkstyle rules
       Details: http://jira.codehaus.org/browse/CASTOR-1800
       (Edward - 20070101)

XML:   Resolved issue CASTOR-1799 using contribution from Edward Kuns [edward.kuns@aspect.com]
       XML handler & descriptor checkstyle cleanup
       Details: http://jira.codehaus.org/browse/CASTOR-1799
       (Edward - 20070101)

XML:   Resolved issue CASTOR-1792 using contribution from Ralf Joachim [Ralf.joachim@syscon-world.de]
       Cleaned up 344 'Paren Pad' warnings at builder package.